Fixed padding on mobile, added leaderboard link

--- a/frontend/website/static/css/termynal.css
+++ b/frontend/website/static/css/termynal.css
@@ -20,7 +20,7 @@
     font-size: 18px;
     font-family: 'Fira Mono', Consolas, Menlo, Monaco, 'Courier New', Courier, monospace;
     border-radius: 4px;
-    padding: 75px 45px 35px;
+    padding: 63px 8px 24px;
     position: relative;
     -webkit-box-sizing: border-box;
             box-sizing: border-box;
